fixed headlines on small screens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,10 +2,11 @@
 @import './style/main.css';
 
 footer {
+  padding: 50px 0 50px 0;
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px; /* Height of the footer */
+  height: 60px;
 }
 
 @media (max-height: 800px) {
