--- a/src/app/departure/departure.component.css
+++ b/src/app/departure/departure.component.css
@@ -10,9 +10,6 @@
 }
 
 @media (max-width: 400px) {
-  li.flex-container {
-    display: block;
-  }
   li.flex-container > .big-flex-item {
     display: block;
     text-align: center;
