--- a/src/app/stop-details/stop-details.component.css
+++ b/src/app/stop-details/stop-details.component.css
@@ -7,9 +7,6 @@
 }
 
 @media (max-width: 400px) {
-  .next_departures {
-    display: none;
-  }
   .label {
     display: block;
   }
