--- a/src/styles.css
+++ b/src/styles.css
@@ -12,12 +12,12 @@ html {
 }
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-.dark
-{
+.dark {
   --highlight1: #e34f6d;
   --highlight2: #88cbc4;
   --color: #eeeeee;
@@ -25,8 +25,7 @@ html {
   --background2: #143d52;
 }
 
-.light
-{
+.light {
   --highlight1: #e34f6d;
   --highlight2: #88cbc4;
   --color: #143d52;
@@ -41,7 +40,6 @@ body {
   font-size: var(--basic-size);
   color: var(--color);
   background: var(--background2);
-  box-sizing: border-box;
   text-align: center;
 }
 
@@ -65,7 +63,9 @@ a {
 }
 
 li {
-  padding:  5px 10px;
+  min-height: 40px;
+  padding: 5px 10px;
+  border: 1px solid var(--background);
   /*transition: 0.5s;*/
 }
 
@@ -79,6 +79,7 @@ li:hover {
 .big-flex-item {
   text-align: left;
 }
+
 .small-flex-item {
   width: 30%;
   text-align: right;
@@ -89,11 +90,27 @@ li:hover {
   .flex-container > * {
     min-width: 0;
   }
-  li.flex-container {
-    flex-direction: row;
+
+  .big-flex-item {
+    width: 100%;
   }
 
-  .big-flex-item {width: 100%;}
-  .flex-container {margin: 0 2%;}
+  .flex-container {
+    margin: 0 2%;
+  }
+
+  .br_on_medium_screen {
+    display: block;
+  }
 }
 
+
+@media (max-width: 500px) {
+  .del_on_narrow_screen {
+    display: none;
+  }
+
+  .br_on_narrow_screen {
+    display: block;
+  }
+}
